# codeflow

./: .env.example  .gitignore  README.md  archive-2026-07-13.md  bugs-archive-2026-07-11.md  bugs-archive-2026-07-12.md  bugs.md  plan.md  pyproject.toml
docs/: 2026-07-08-synapse-trials-protocol.md  2026-07-15-feature-audit.md  bugs.md  dispatcher-kora-ideal-architecture.md  synapse-master-spec.md
probes/: ARTIFACTS.md  p3b_context_id.py  p3b_live_switch.py
synapse/: __init__.py  clock.py  config.py  journal.py  projects.py  prompt.py  threads.py
tests/: test_adv_advisor_personas.py  test_answer_kora.py  test_api_tts_diff.py  test_arbiter.py  test_b_pipe_bugs.py  test_breaker.py  test_bsim_compaction_failing.py  test_bughunt_2026_07_15_failing.py  test_bughunt_w1_app_config.py  test_bughunt_w1_dispatch_webrtc.py  test_bughunt_w1_state.py  test_bughunt_w2_cascade.py  test_bughunt_w2_persistence.py  test_bughunt_w3.py  test_bughunt_w4.py  test_bughunt_w5.py  test_bugs_0714_archived_paths.py  test_bugs_0714_bridge.py  test_bugs_0714_gatestate.py  test_bugs_0714_realtime.py  test_bugs_0714_routes.py  test_bugs_0714_voiceflush.py  test_bugs_audit.py  test_c5_authn.py  test_c5_client_authn.py  test_c5_static_surfaces_authn.py  test_chat_commands.py  test_classify.py  test_concurrency_race.py  test_confirm.py  test_console_e2e.py  test_context_guard.py  test_costcap.py  test_findings_reproduction.py  test_full_mesh_m1.py  test_full_mesh_m2.py  test_full_mesh_m3.py  test_gate_v2.py  test_host_singleton.py  test_hunt0714_a.py  (+55 more)
tools/: bench_llm_providers.py  (+2 more)
(+66 files in other folders)
