[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse"
version = "0.1.0"
description = "Synapse — voice dispatcher bridge to Kora (Claude Code executor on the user's home machine)"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[deepgram,fish,openai,anthropic,google]>=1.5",
    "openai",
    "anthropic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
record = ["sounddevice", "soundfile"]
voice = ["pipecat-ai[local]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["synapse*"]
